Fixing navbar items overflowing over scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     @apply h-full text-black dark:text-white;
   }
   .bg-wrap {
-    @apply h-screen overflow-y-auto bg-gradient-to-b from-slate-100 to-slate-400 pt-14 pb-12 dark:from-gray-700  dark:to-slate-900 sm:bg-fixed sm:pb-0;
+    @apply h-screen overflow-y-auto bg-gradient-to-b from-slate-100 to-slate-400  pb-12 dark:from-gray-700  dark:to-slate-900 sm:bg-fixed sm:pb-0;
   }
 }
 
